--- a/pom.xml
+++ b/pom.xml
@@ -1,95 +1,61 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project>
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.2</version>
-    <relativePath/> <!-- lookup parent from repository -->
-  </parent>
-
   <groupId>io.opsit</groupId>
   <artifactId>opsit-qandda</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2</version>
+
+  <name>Opsit Qandda</name>
+  <description>Opsit Qandda - Quick and Dirty Dependency Analizer</description>
+  <url>https://github.com/opsit-io/opsit-qandda</url>
+
+  <licenses>
+    <license>
+      <name>GNU Affero General Public License v3.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Eugene Doudine</name>
+      <email>dudinea@opsit.io</email>
+      <organization>opsit.io</organization>
+      <organizationUrl>https://github.com/opsit-io</organizationUrl>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git@github.com:opsit-io/opsit-qandda.git</connection>
+    <developerConnection>scm:git:ssh@github.com:opsit-io/opsit-qandda</developerConnection>
+    <url>https://github.com/opsit-io/opsit-qandda</url>
+  </scm>
 
   <properties>
-    <logback.contrib.version>0.1.5</logback.contrib.version>
-    <java.version>11</java.version>
-    <maven.version>3.3</maven.version>
-
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
-    <argLine>-Djava.security.egd=file:/dev/./urandom -Xmx256m</argLine>
-    <m2e.apt.activation>jdt_apt</m2e.apt.activation>
-    <run.addResources>false</run.addResources>
-    <!-- These remain empty unless the corresponding profile is active -->
-    <!--        <profile.api-docs/>-->
-    <!--        <profile.tls/>-->
-
-    <!-- Dependency versions -->
-    <!-- Plugin versions -->
-    <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
-    <maven-site-plugin.version>3.9.1</maven-site-plugin.version>
-    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-    <maven-javadoc-plugin.version>3.3.1</maven-javadoc-plugin.version>
-    <maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
-    <maven-enforcer-plugin.version>3.0.0</maven-enforcer-plugin.version>
-    <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
-    <maven-idea-plugin.version>2.2.1</maven-idea-plugin.version>
-    <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
-    <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
-    <maven-war-plugin.version>3.3.1</maven-war-plugin.version>
-    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
-    <checkstyle.version>9.0</checkstyle.version>
-
-    <git-commit-id-plugin.version>5.0.0</git-commit-id-plugin.version>
-    <modernizer-maven-plugin.version>2.3.0</modernizer-maven-plugin.version>
-    <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
-    <jib-maven-plugin.version>3.1.4</jib-maven-plugin.version>
-    <jib-maven-plugin.image>eclipse-temurin:11-jre-focal</jib-maven-plugin.image>
-    <jib-maven-plugin.architecture>amd64</jib-maven-plugin.architecture>
-    <lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
-    <properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
-    <sonar-maven-plugin.version>3.9.0.2155</sonar-maven-plugin.version>
-    <prettytime.version>5.0.2.Final</prettytime.version>
-    <junit.version>[4.13.1,)</junit.version>
-    <common-collections.version>3.2.2</common-collections.version>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <junit.version>4.13.1</junit.version>
   </properties>
 
-  <distributionManagement>
-    <snapshotRepository>
-      <id>artifact-registry</id>
-      <url>https://europe-west3-maven.pkg.dev/opsit-compute/opsit-maven-releases</url>
-    </snapshotRepository>
-    <repository>
-      <id>artifact-registry</id>
-      <url>https://europe-west3-maven.pkg.dev/opsit-compute/opsit-maven-releases</url>
-    </repository>
-  </distributionManagement>
-
-  <repositories>
-    <repository>
-      <id>artifact-registry</id>
-      <url>https://europe-west3-maven.pkg.dev/opsit-compute/opsit-maven-releases</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>Shibboleth</id>
-      <name>Shibboleth</name>
-      <url>https://build.shibboleth.net/nexus/content/repositories/releases/</url>
-    </repository>
-  </repositories>
-  
   <dependencies>
+    <dependency>
+	  <groupId>io.opsit</groupId>
+	  <artifactId>opsit-version-type</artifactId>
+	  <version>0.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-xml</artifactId>
+      <version>2.13.1</version>
+    </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-interpolation</artifactId>
@@ -100,63 +66,176 @@
       <artifactId>maven-model</artifactId>
       <version>3.3.9</version>
     </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.dataformat</groupId>
-      <artifactId>jackson-dataformat-xml</artifactId>
-      <version>2.13.1</version>
-    </dependency>
-    <!-- test-time dependencies -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
-  <build>
-    <finalName>opsit-qandda</finalName>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+    </repository>
+  </distributionManagement>
 
-    <!-- <extensions>
-         <extension>
-         <groupId>com.google.cloud.artifactregistry</groupId>
-         <artifactId>artifactregistry-maven-wagon</artifactId>
-         <version>2.1.4</version>
-         </extension>
-         </extensions> -->
+  <profiles>
+    <profile>
+      <id>publish</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>3.0.1</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+  
+  <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <showWarnings>true</showWarnings>
+          <compilerArgs>
+            <!--arg>-Werror</arg-->
+            <arg>-Xlint:all</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+      <!--plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.3.0</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <shadedArtifactAttached>true</shadedArtifactAttached>
+              <shadedClassifierName>runnable</shadedClassifierName>
+              <createDependencyReducedPom>false</createDependencyReducedPom>
+              <filters>
+                <filter>
+                  <artifact>io.opsit:opsit-version-type</artifact>
+                  <excludes>
+                    <exclude>META-INF/MANIFEST.MF</exclude>
+                  </excludes>
+                </filter>
+              </filters>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <manifestEntries>
+                    <Main-Class></Main-Class>
+                  </manifestEntries>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.2</version>
+        <!--configuration>
+          <archive>
+            <index>true</index>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass></mainClass>
+            </manifest>
+          </archive>            
+        </configuratio-->
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire-plugin.version}</version>
+        <version>3.0.0-M5</version>
+      </plugin>
+      <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.4.0</version>
+        <configuration>
+          <doclint>all,-missing</doclint>
+          <quiet>true</quiet>
+        </configuration>
+		<executions>
+		  <execution>
+		    <id>attach-javadocs</id>
+		    <goals>
+		      <goal>jar</goal>
+		    </goals>
+		  </execution>
+		</executions>
+	  </plugin>
+      <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-source-plugin</artifactId>
+        <version>3.2.1</version>
+		<executions>
+		  <execution>
+			<id>attach-sources</id>
+			<goals>
+			  <goal>jar</goal>
+			</goals>
+		  </execution>
+		</executions>
+	  </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>3.1.2</version>
         <dependencies>
           <dependency>
-            <groupId>org.apache.maven.surefire</groupId>
-            <artifactId>surefire-junit47</artifactId>
-            <version>3.0.0-M5</version>
+            <groupId>com.puppycrawl.tools</groupId>
+            <artifactId>checkstyle</artifactId>
+            <version>8.31</version>
           </dependency>
         </dependencies>
         <configuration>
-          <junitArtifactName>junit:junit:${junit.version}</junitArtifactName>
-          <!-- Force alphabetical order to have a reproducible build -->
-          <runOrder>alphabetical</runOrder>
-          <excludes>
-            <exclude>**/*IT*</exclude>
-            <exclude>**/*IntTest*</exclude>
-          </excludes>
+          <configLocation>.checkstyle.xml</configLocation>
+          <encoding>UTF-8</encoding>
+          <consoleOutput>true</consoleOutput>
+          <failsOnError>true</failsOnError>
+          <linkXRef>false</linkXRef>
         </configuration>
+        <executions>
+          <execution>
+            <id>validate</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven-compiler-plugin.version}</version>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.7</version>
+        <extensions>true</extensions>
         <configuration>
-          <source>16</source>
-          <target>16</target>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>3.2.0</version>
       </plugin>
     </plugins>
   </build>
