--- a/src/test/resources/pom/opsit/pom.xml
+++ b/src/test/resources/pom/opsit/pom.xml
@@ -342,7 +342,7 @@
         </repository>
         <repository>
             <id>mvnrepository</id>
-            <url>http://repo1.maven.org/maven2</url>
+            <url>https://repo1.maven.org/maven2</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
